scrollbar fix

--- a/public/assets/scss/material-dashboard/_navbar-vertical.scss
+++ b/public/assets/scss/material-dashboard/_navbar-vertical.scss
@@ -73,7 +73,7 @@
           box-shadow: none;
 
           .navbar-collapse {
-            display: block;
+            display: contents;
             overflow: auto;
             height: $navbar-vertical-inner;
           }
